# bosun-midi-captain

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
docs/: stress-testing.md
docs/plans/: 20260614_105329_scaffold_firmware_and_editor.md  20260615_084932_serialport_rs_read_corruption.md  20260615_100813_backlog_and_firmware_hang_fixes.md  20260615_235152_kemper_bidir_tft_fields.md  20260616_183556_editor_ui_stress_tests.md  20260617_235235_auto_reboot_after_install.md  20260619_150959_restore_stock_firmware.md  20260619_153302_auto_detect_unflashed_pedal.md  20260620_154616_ui_test_sweep.md  20260620_162425_in_editor_midi_bridge.md  20260711_145246_scrolling_text_tft.md  20260711_151548_platform_improvements.md  20260711_224324_nav_preview_and_tuner_passthrough.md  20260711_233908_editor_usability.md  20260712_005054_nav_hierarchy_and_quicksetup_tab.md  20260712_085738_platform_feature_roadmap.md  20260712_125830_tempo_dot_and_hold_indicator.md  20260712_184946_remove_tempo_feature.md  kemper_midi_14_1_dump.txt  manifest_dump.txt
docs/ui-test-screenshots/: send_test_pc.py  steps_authstate.json  steps_bridge.json  steps_bridgecopy.json  steps_capdump.json  steps_capture1.json  steps_combofix.json  steps_dialogs.json  steps_dirty.json  steps_dirty2.json  steps_dirty3.json  steps_discard.json  steps_editor.json  steps_editor2.json  steps_editor3.json  steps_editor4.json  steps_finish.json  steps_learn.json  steps_nav.json  steps_onboard.json  steps_onboard2.json  steps_onboard3.json  steps_reconnect.json  steps_restore.json  steps_stability.json  steps_theme.json  uidrv.py
editor/: .gitignore  SETUP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
editor/src/: App.svelte
editor/src-tauri/: Cargo.toml  android-config.md  tauri.conf.json
editor/src-tauri/capabilities/: android.json  default.json
editor/src-tauri/icons/: icon.icns
editor/src-tauri/src/: export.rs  installer.rs  lib.rs  main.rs  midi.rs  serial.rs
editor/src-tauri/src/serial/: android.rs  desktop.rs  mod.rs
editor/src/components/: ColorField.svelte  Dashboard.svelte  DeviceImport.svelte  DeviceMirror.svelte  ExpressionPedals.svelte  FirmwarePushOverlay.svelte  HelpTip.svelte  Installer.svelte  Maintenance.svelte  MaintenancePanel.svelte  MidiLearn.svelte  MidiMonitor.svelte  Onboarding.svelte  PatchActions.svelte  PatchEditor.svelte  PatchesGrid.svelte  PedalMap.svelte  PedalSimulator.svelte  PluginRecipe.svelte  ProfilePicker.svelte  QuickSetup.svelte  SetlistView.svelte  Settings.svelte  TftLayout.svelte
editor/src/lib/: android-lifecycle.ts  android-usb.ts  config-backup.test.ts  config-backup.ts  firmware-push.ts  firmware-update.ts  help-text.test.ts  help-text.ts  installer.ts  led-color.test.ts  led-color.ts  manifest-fallback.test.ts  midi-decode.test.ts  midi-decode.ts  offline-config.test.ts  offline-config.ts  patch-links.test.ts  patch-links.ts  pedal-layout.test.ts  pedal-layout.ts  platform.ts  plugin-sections.test.ts  plugin-sections.ts  protocol.ts  recipes.test.ts  recipes.ts  setlists.test.ts  setlists.ts  snippets.test.ts  snippets.ts  switch-colors.test.ts  switch-colors.ts  switch-fsm.test.ts  switch-fsm.ts  theme.ts  ui-scale.test.ts  ui-scale.ts  undo-stack.test.ts  undo-stack.ts
editor/tests/: app-events.test.ts  app-handlers-stress.test.ts  config-backup-roundtrip.test.ts  firmware-update.test.ts  protocol-endurance.test.ts  protocol-stress.test.ts  setup.ts
fdroid/: metadata.yml
firmware/: boot.py  code.py
firmware/fonts/: NOTICE.txt
firmware/lib/captain/: app.py  bindings.py  board.py  config.py  display.py  expression.py  leds.py  messages.py  midi.py  navigation.py  plugin.py  protocol.py  store.py
firmware/lib/plugins/: __init__.py  ampero.py  generic_midi.py  kemper.py  line6_helix.py
samples/sample-profiles/: active_profile.json
tools/: bilateral_test.py  download-assets.ps1  enter_bootloader.py  expression_test.py  find_data_port.py  firmware_stability_test.py  flash_firmware.py  flash_over_cdc.py  fsm_test.py  get_patch.py  hard_reset.py  kemper_bank_change_test.py  kemper_capture.py  kemper_plugin_test.py  kemper_probe.py  kemper_rigchange_probe.py  midi_bridge.py  midi_parser_test.py  nav_preview_test.py  package-portable.ps1  plugins_test.py  preview_tuner_test.py  protocol_test.py  push_file.py  push_firmware.py  push_patches.py  raw_manifest.py  read_device.py  read_gp1.py  read_repl.py  rename_default_profile.py  restore_stock.ps1  run_all_tests.py  see_raw_ack.py  seed_layout_c.py  setlist_test.py  soak_test.py  stress.py  ui_debug.py  verify_autosave.py  (+1 more)
(+13 files in other folders)
